# terminal3-agent-mesh

./: .gitignore  BUGS_AND_GAPS.md  BUILD_PLAN.md  DORAHACKS_SUBMISSION.md  README.md  SUBMISSION.md  VIDEO_SHOTLIST.md  agent-report.html  agent-transcript.json  cast.html  demo-report.html  demo-transcript.json  encountered-issues.jsonl  narration.txt  package-lock.json  package.json  recon-findings.json  voice.aiff
contracts/mesh-seller/: Cargo.toml
contracts/mesh-seller/src/: lib.rs
contracts/mesh-seller/wit/: world.wit
contracts/smoke/: Cargo.toml
contracts/smoke/src/: lib.rs
contracts/smoke/wit/: world.wit
samples/: Allison.aiff  Daniel.aiff  Karen.aiff  Moira.aiff  Tessa.aiff
src/: agent-buyer.ts  auth-test.ts  devlog.ts  gen-cast.ts  gen-logo.ts  gen-report.ts  gen-thumb.ts  mesh-demo.ts  mesh-setup.ts  pw-smoke.ts  record-cast.ts  smoke.ts  test-cross-tenant-invoke.ts  test-second-tenant.ts
