[package]
name = "smoke"
version = "0.1.0"
edition = "2021"
description = "Minimal T3 smoke-test contract — proves register -> invoke"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = { version = "0.49", default-features = false, features = ["macros", "realloc"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
